feat(homepage): Add calculator GUI and background

--- a/index.html
+++ b/index.html
@@ -3,11 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
+    <title>Skyculator</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js"></script>
 </head>
 <body>
-    
+    <div id="container">
+        <div id="display">
+            <span id="display-digits">210</span>
+        </div>
+
+        <div class="rows">
+            <button class="buttons"> CE </button>
+            <button class="buttons"> C </button>
+            <button class="buttons"> +/- </button>
+            <button class="buttons"> ÷ </button>
+        </div>
+        
+        <div class="rows">
+            <button class="buttons"> 7 </button>
+            <button class="buttons"> 8 </button>
+            <button class="buttons"> 9 </button>
+            <button class="buttons"> × </button>
+        </div>
+
+        <div class="rows">
+            <button class="buttons"> 4 </button>
+            <button class="buttons"> 5 </button>
+            <button class="buttons"> 6 </button>
+            <button class="buttons"> - </button>
+        </div>
+
+        <div class="rows">
+            <button class="buttons"> 1 </button>
+            <button class="buttons"> 2 </button>
+            <button class="buttons"> 3 </button>
+            <button class="buttons"> + </button>
+        </div>
+
+        <div class="rows">
+            <button class="buttons"> 0 </button>
+            <button class="buttons"> • </button>
+            <button class="buttons"> ⌫ </button>
+            <button class="buttons"> = </button>
+        </div>
+    </div>
 </body>
 </html>
