Feat(homepage): add respective functions to most buttons
Also styled special buttons with another color to better distinction

--- a/index.html
+++ b/index.html
@@ -5,47 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skyculator</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js"></script>
+    <script src="js/script.js" defer></script>
 </head>
 <body>
     <div id="container">
         <div id="display">
-            <span id="display-digits">210</span>
+            <span id="display-digits">8</span>
         </div>
 
         <div class="rows">
-            <button class="buttons"> CE </button>
-            <button class="buttons"> C </button>
-            <button class="buttons"> +/- </button>
-            <button class="buttons"> ÷ </button>
+            <button class="btns special-btns"> CE </button>
+            <button class="btns special-btns"> C </button>
+            <button class="btns special-btns"> +/- </button>
+            <button class="btns special-btns"> ÷ </button>
         </div>
         
         <div class="rows">
-            <button class="buttons"> 7 </button>
-            <button class="buttons"> 8 </button>
-            <button class="buttons"> 9 </button>
-            <button class="buttons"> × </button>
+            <button class="btns numbers"> 7 </button>
+            <button class="btns numbers"> 8 </button>
+            <button class="btns numbers"> 9 </button>
+            <button class="btns special-btns times" > × </button>
         </div>
 
         <div class="rows">
-            <button class="buttons"> 4 </button>
-            <button class="buttons"> 5 </button>
-            <button class="buttons"> 6 </button>
-            <button class="buttons"> - </button>
+            <button class="btns numbers"> 4 </button>
+            <button class="btns numbers"> 5 </button>
+            <button class="btns numbers"> 6 </button>
+            <button class="btns special-btns"> - </button>
         </div>
 
         <div class="rows">
-            <button class="buttons"> 1 </button>
-            <button class="buttons"> 2 </button>
-            <button class="buttons"> 3 </button>
-            <button class="buttons"> + </button>
+            <button class="btns numbers"> 1 </button>
+            <button class="btns numbers"> 2 </button>
+            <button class="btns numbers"> 3 </button>
+            <button class="btns special-btns"> + </button>
         </div>
 
         <div class="rows">
-            <button class="buttons"> 0 </button>
-            <button class="buttons"> • </button>
-            <button class="buttons"> ⌫ </button>
-            <button class="buttons"> = </button>
+            <button class="btns numbers"> 0 </button>
+            <button class="btns dot"> • </button>
+            <button class="btns erase"> ⌫ </button>
+            <button class="btns special-btns"> = </button>
         </div>
     </div>
 </body>
