--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="display">
-            <span id="display-digits">8</span>
+            <span id="display-digits"></span>
         </div>
 
         <div class="rows">
@@ -24,7 +24,7 @@
             <button class="btns numbers"> 7 </button>
             <button class="btns numbers"> 8 </button>
             <button class="btns numbers"> 9 </button>
-            <button class="btns special-btns times" > × </button>
+            <button class="btns special-btns" > × </button>
         </div>
 
         <div class="rows">
@@ -43,8 +43,8 @@
 
         <div class="rows">
             <button class="btns numbers"> 0 </button>
-            <button class="btns dot"> • </button>
-            <button class="btns erase"> ⌫ </button>
+            <button class="btns dot-erase"> • </button>
+            <button class="btns dot-erase"> ⌫ </button>
             <button class="btns special-btns"> = </button>
         </div>
     </div>
