fix/refactor: decimals calculation and '+/-' button
It's now possible to calculate two float numbers

'+/-' button now changes font size responsively

Madde a little refactoring in .js
Added buttons values in html

--- a/index.html
+++ b/index.html
@@ -14,38 +14,38 @@
         </div>
 
         <div class="rows">
-            <button class="btns special-btns"> CE </button>
-            <button class="btns special-btns"> C </button>
-            <button class="btns special-btns"> +/- </button>
-            <button class="btns special-btns"> ÷ </button>
+            <button class="btns special-btns" value="CE"> CE </button>
+            <button class="btns special-btns" value="C"> C </button>
+            <button class="btns special-btns" value="+/-"> +/- </button>
+            <button class="btns special-btns" value="÷"> ÷ </button>
         </div>
         
         <div class="rows">
-            <button class="btns numbers"> 7 </button>
-            <button class="btns numbers"> 8 </button>
-            <button class="btns numbers"> 9 </button>
-            <button class="btns special-btns" > × </button>
+            <button class="btns numbers" value="7"> 7 </button>
+            <button class="btns numbers" value="8"> 8 </button>
+            <button class="btns numbers" value="9"> 9 </button>
+            <button class="btns special-btns" value="×"> × </button>
         </div>
 
         <div class="rows">
-            <button class="btns numbers"> 4 </button>
-            <button class="btns numbers"> 5 </button>
-            <button class="btns numbers"> 6 </button>
-            <button class="btns special-btns"> - </button>
+            <button class="btns numbers" value="4"> 4 </button>
+            <button class="btns numbers" value="5"> 5 </button>
+            <button class="btns numbers" value="6"> 6 </button>
+            <button class="btns special-btns" value="-"> - </button>
         </div>
 
         <div class="rows">
-            <button class="btns numbers"> 1 </button>
-            <button class="btns numbers"> 2 </button>
-            <button class="btns numbers"> 3 </button>
-            <button class="btns special-btns"> + </button>
+            <button class="btns numbers" value="1"> 1 </button>
+            <button class="btns numbers" value="2"> 2 </button>
+            <button class="btns numbers" value="3"> 3 </button>
+            <button class="btns special-btns" value="+"> + </button>
         </div>
 
         <div class="rows">
-            <button class="btns numbers"> 0 </button>
-            <button class="btns dot-erase"> • </button>
-            <button class="btns dot-erase"> ⌫ </button>
-            <button class="btns special-btns"> = </button>
+            <button class="btns numbers" value="0"> 0 </button>
+            <button class="btns dot-erase" value="•"> • </button>
+            <button class="btns dot-erase" value="⌫"> ⌫ </button>
+            <button class="btns special-btns" value="="> = </button>
         </div>
     </div>
 </body>
