feat: Add keyboard support
Also refactored code

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
         <div class="rows">
             <button class="btns numbers" value="0"> 0 </button>
-            <button class="btns dot-erase" value="•"> • </button>
-            <button class="btns dot-erase" value="⌫"> ⌫ </button>
+            <button class="btns special-btns dot" value="•"> • </button>
+            <button class="btns special-btns erase" value="⌫"> ⌫ </button>
             <button class="btns special-btns" value="="> = </button>
         </div>
     </div>
