--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
     <script src="https://kit.fontawesome.com/5e7b46bf3f.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="favicon/calculate_24dp_FILL0_wght400_GRAD0_opsz24.png" type="image/x-icon">
 </head>
 <body>
     <main id="container">
